# 2026Spring-4-Dian

./: .gitignore  Learning_NOTES.md  README.md
3_1/: CMakeLists.txt
3_1/main/: CMakeLists.txt  sta_main.c
3_2/: README.md
3_2/main/: CMakeLists.txt  iperf_main.c
3_3/main/: Kconfig.projbuild  apsta_nat_main.c
AIGC-TOY/LED-Control-by-UART/: README.md
AIGC-TOY/LED-Control-by-UART/main/: main.c
Level-0/0_LED/: README.md
Level-0/0_LED/main/: CMakeLists.txt  init-4-LED.c  init-4-LED.h  main.c
Level-0/0_RGB/: CMakeLists.txt  README.md
Level-0/0_RGB/main/: CMakeLists.txt  main.c
Level-1/1_I2S/: CMakeLists.txt  README.md
Level-1/1_I2S/main/: CMakeLists.txt  audio_generator.c  audio_generator.h  button_driver.c  button_driver.h  i2s_driver.c  i2s_driver.h  main.c  task_manager.c  task_manager.h
Level-1/1_UART/: CMakeLists.txt  README.md  sdkconfig
Level-1/1_UART/main/: CMakeLists.txt  main.c  main_batch.c
Level-2(not-finishedTAT)/MP3/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
Level-2(not-finishedTAT)/MP3-flash-storage/: CMakeLists.txt  README.md  sdkconfig.defaults
Level-2(not-finishedTAT)/MP3-flash-storage/main/: CMakeLists.txt  i2s_driver.c  main.c  mp3_player.c
Level-2(not-finishedTAT)/MP3-flash-storage/main/include/: i2s_driver.h  mp3_player.h
Level-2(not-finishedTAT)/MP3/main/: CMakeLists.txt  Kconfig.projbuild  (+11 more)
Level-2(not-finishedTAT)/SD-SPI-TEST/: CMakeLists.txt  README.md  sdkconfig
Level-3/3_1/: README.md  sdkconfig
Level-3/3_2/: CMakeLists.txt  sdkconfig.defaults
Level-3/3_3/: CMakeLists.txt  README.md
(+5 files in other folders)
